# modelsmith

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py  requirements.txt
backend/api/: ab_test.py  abliterate.py  activation_stream.py  advisor.py  advisor_ext.py  analyze.py  chat.py  compress.py  export.py  lora.py  marketplace.py  merge.py  models.py  node_group.py  pipeline.py  pipeline_ext.py  project.py  provenance.py  system.py  ws.py
backend/core/: abliterator.py  advisor.py  analyzer.py  compressor.py  config_profiles.py  errors.py  exporter.py  grid_search.py  inference.py  kv_compress.py  llmfit_adapter.py  lora_manager.py  model_loader.py  model_manager.py  model_merger.py  model_registry.py  pipeline.py  project_manager.py  security.py  system.py  turbovec_index.py
backend/tests/: test_abliterator.py  test_advisor.py  test_analyzer.py  test_api_advisor_ext.py  test_api_compress.py  test_api_gridsearch.py  test_api_pipeline.py  test_api_provenance.py  test_compressor.py  test_config_profiles.py  test_exporter.py  test_inference.py  test_kv_compress.py  test_lora_manager.py  test_model_loader.py  test_model_manager.py  test_model_merger.py  test_pipeline.py  (+3 more)
doc/: API.md  ARCHITECTURE.md  BACKEND.md  CHANGELOG.md  FRONTEND.md  SETUP.md
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  PIPELINE.md  SECURITY.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+80 files in other folders)
