[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelsmith"
version = "1.0.0"
description = "Surgical model editing, abliteration, and compilation for local AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ModelSmith Team" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.8.0",
    "httpx>=0.24.0",
    "safetensors>=0.4.0",
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.560.30",
    "websockets>=13.0",
    "huggingface-hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/subhakantrout/modelsmith"
Source = "https://github.com/subhakantrout/modelsmith"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "backend/tests",
]
